2017-01-12  Niels Möller  <nisse@lysator.liu.se>

	* examples/nettle-benchmark.c (bench_skein256_block)
	(bench_skein512_block): New functions.
	(main): Use them.

2016-12-27  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/skein256-test.c: Use symbolic constants.

2016-10-18  Niels Möller  <nisse@lysator.liu.se>

	* skein512-internal.c (_skein512_block): New file and function.
	* skein.h: Added skein512 declarations.
	* Makefile.in (nettle_SOURCES): Added skein512-internal.c.
	* testsuite/skein512-test.c: New test case.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added skein512-test.c.

2016-10-16  Niels Möller  <nisse@lysator.liu.se>

	* skein256-internal.c (_skein256_block): Keep the subkey words in
	scalar variables.
	* x86_64/skein256-internal.asm: Likewise, keep subkey words in
	registers.

2016-10-15  Niels Möller  <nisse@lysator.liu.se>

	* skein256-internal.c (_skein256_block): Keep tweak words in
	scalar variables, and expand on the fly, which is a single xor
	operation.
	* x86_64/skein256-internal.asm: Likewise, keep tweak words in
	registers.
	* skein256.c (_skein256_expand): Deleted tweak argument. Updated
	callers.
	* skein.h (_SKEIN_NTWEAK): Reduce to 2.

2016-10-14  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/skein256-internal.asm: New file, initial assembly
	implementation for x86_64. Modest speedup compared to C version.

2016-10-13  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added skein256-internal.c.

	* skein256-internal.c (_skein256_block): Move to a separate file,
	from...
	* skein256.c: ... old location.

2016-10-12  Niels Möller  <nisse@lysator.liu.se>

	* skein.h (_SKEIN256_NKEYS, _SKEIN_NTWEAK): Increase to 6 and 4,
	respectively, to reduce number of modulo operations.
	* skein256.c (_skein256_expand): Intialize the additional words.
	(_skein256_block): Avoid modulo operations in the loop. Almost 50%
	speedup.

	* skein256.c (_skein256_expand): New function.
	(skein256_process_block): Use it.
